<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditText
        android:id="@+id/edtUsername"
        android:inputType="text"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Spinner
        android:id="@+id/selectRole"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="30dp"
        android:text="@string/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnEmployee"
        android:layout_marginTop="20dp"
        android:text="@string/employee"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

</LinearLayout>
