<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/startDate"
        android:textSize="18sp"
        android:gravity="center"
        android:elevation="1dp"
        android:padding="2dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_textview"
        android:layout_margin="5dp"
        android:text="Select Start\n Date"
        android:layout_alignParentTop="true"
        android:layout_width="130dp"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/endDate"
        android:textSize="18sp"
        android:gravity="center"
        android:elevation="1dp"
        android:layout_toEndOf="@id/startDate"
        android:padding="2dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_textview"
        android:layout_margin="5dp"
        android:text="Select End\n Date"
        android:layout_alignParentTop="true"
        android:layout_width="130dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/searchVehicle"
        android:text="@string/search"
        android:layout_toEndOf="@id/endDate"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <ListView
        android:id="@+id/vehicleListView"
        android:layout_below="@id/startDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_alignParentBottom="true"
        android:text="@string/employee_logout"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvNoVehicles"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:text="@string/no_vehicles_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
