<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/vehicleImage"
        android:scaleType="centerCrop"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:layout_width="80dp"
        android:layout_height="112dp" />

    <LinearLayout
        android:id="@+id/first"
        android:layout_toEndOf="@id/vehicleImage"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vehicleType"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_toEndOf="@id/first"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/brand"
            android:textSize="18sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vehicleBrand"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third"
        android:layout_below="@+id/first"
        android:layout_toEndOf="@id/vehicleImage"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/model"
            android:textSize="18sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vehicleModel"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth"
        android:layout_below="@+id/second"
        android:layout_toEndOf="@id/third"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/year"
            android:textSize="18sp"
            android:singleLine="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vehicleYear"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth"
        android:layout_below="@+id/third"
        android:layout_toEndOf="@id/vehicleImage"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vehicleColor"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/fifth"
        android:layout_toEndOf="@id/vehicleImage"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/license_plate"
            android:textSize="18sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vehicleLicensePlate"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>